Correction on header-subtitle z-index

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -36,7 +36,7 @@
   position: absolute;
   bottom: 30px;
   left: 64px;
-  z-index: 1;
+  z-index: 3;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
